# DZ_WEB10.1

./: .env.example  pyproject.toml
dz_project/dz_project/: settings.py  urls.py
dz_project/quotes/templates/quotes/: base.html
dz_project/users/: urls.py
dz_project/utils/: migration.py
